<resources>
    <string name="app_name">Climb</string>
    <string name="username">Username</string>
    <string name="displayName">Display Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="logout">Log Out</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="textview">TextView</string>
    <string name="refresh">Refresh</string>
    <string name="upload">Upload</string>
    <string name="undo">Undo</string>
    <string name="addBeta">Add Beta</string>
</resources>
